# django-khalti

./: LICENSE  README.rst  setup.cfg
django_khalti.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
khalti/: apps.py  urls.py  views.py
